# tic-tac-toe

./: README.md
Backend/: CMakeLists.txt  library.cpp  library.h
Frontend/: GameJNI.java  GameJNITest.java  Main.java  TicTacToeGUI.java  libbackend.dylib
